--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.2",
+    "react-leaflet": "^4.0.0-alpha.2",
     "react-query": "^3.39.0",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
