--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-hook-form": "^7.31.2",
     "react-leaflet": "^4.0.0-alpha.2",
+    "react-modal": "^3.15.1",
     "react-query": "^3.39.0",
     "react-rating-stars-component": "^2.2.0",
     "react-responsive-carousel": "^3.2.23",
