--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.1",
+    "recharts": "^2.1.10",
     "tw-elements": "^1.0.0-alpha12",
     "web-vitals": "^2.1.4"
   },
