--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-firebase-hooks": "^5.0.3",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.31.2",
     "react-leaflet": "^4.0.0-alpha.2",
     "react-modal": "^3.15.1",
